<resources>
    <string name="app_name">Travel</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="don_t_you_have_an_account_register_now">Don\'t you have an account? Register now.</string>
    <string name="explore_the_world">Explore the World</string>
    <string name="passportimage">PassportImage</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="country">Country</string>
    <string name="city">City</string>
    <string name="birth_date">Birth date</string>
    <string name="register">Register</string>
    <string name="code">code</string>
    <string name="activation_code">Activation code</string>

    <string-array name="numberOfDays">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>5</item>
        <item>7</item>
    </string-array>
    <string name="title_activity_main3">MainActivity3</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="pick_a_city">Pick a city</string>
    <string name="activities">Activities</string>

    <string name="nav_drawer_open">Open navigation drawer</string>
    <string name="nav_drawer_close">Close navigation drawer</string>

    <string name="experiences">Unforgettable experiences</string>
    <string name="getToCity">Getting from airport to city</string>
    <string name="transportInCity">Transport in the city</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="select_the_number_of_days">Select the number of days:</string>
    <string name="select_the_transport_types_you_want_to_use">Select the transport types you want to use:</string>
    <string name="select_the_attractions_you_would_like_to_see">Select the attractions you would like to see:</string>
    <string name="configure_your_itinerary">Configure your itinerary</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_5">5</string>
    <string name="_7">7</string>
    <string name="car">Car</string>
    <string name="bus">Bus</string>
    <string name="subway">Subway</string>
    <string name="tram">Tram</string>
    <string name="train">Train</string>
    <string name="get_itinerary">Get itinerary</string>
    <string name="unforgettable_experiences">Unforgettable experiences</string>
    <string name="my_profile">My profile</string>
    <string name="update_profile_info">Update profile info</string>
    <string name="new_password">New password</string>
    <string name="change_password">Change password</string>
    <string name="send_code">Send code</string>
    <string name="send_mail_reset_password">A code for resetting the password will be sent. Enter the email of your account.</string>
    <string name="enter_the_address_of_your_accommodation">Enter the address of your accommodation</string>
    <string name="save_the_itinerary_for_all_days">Save the itinerary for all days</string>
    <string name="my_itineraries">My itineraries</string>


</resources>