<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentUpdateProfile">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/firstName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_round_border"
                android:cursorVisible="true"
                android:drawableStart="@drawable/person"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/first_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/lastName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_round_border"
                android:cursorVisible="true"
                android:drawableStart="@drawable/person"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/last_name"
                android:inputType="textPersonName"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/country"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_round_border"
                android:cursorVisible="true"
                android:drawableStart="@drawable/home"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/country"
                android:inputType="text"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_round_border"
                android:cursorVisible="true"
                android:drawableStart="@drawable/home"
                android:drawablePadding="16dp"
                android:ems="10"
                android:hint="@string/city"
                android:inputType="text"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textStyle="italic" />

            <EditText
                android:id="@+id/birth_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="25dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/blue_round_border"
                android:cursorVisible="true"
                android:drawableStart="@drawable/calendar"
                android:drawablePadding="8dp"
                android:ems="10"
                android:hint="@string/birth_date"
                android:inputType="date"
                android:padding="16dp"
                android:textAlignment="viewStart"
                android:textStyle="italic" />

            <Button
                android:id="@+id/register"
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="50dp"
                android:layout_marginBottom="16dp"
                android:background="@drawable/round_button"
                android:backgroundTint="@color/loginBlue"
                android:cursorVisible="true"
                android:fontFamily="sans-serif"
                android:text="Update"
                android:textColor="@color/loginDarkBlue"
                android:textSize="18sp"
                android:textStyle="bold|italic"
                android:onClick="updateProfileInfo"/>

        </LinearLayout>
    </ScrollView>

</FrameLayout>