<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".FragmentChangePassword">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="16dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_round_border"
            android:cursorVisible="true"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="viewStart"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_round_border"
            android:cursorVisible="true"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="viewStart"
            android:textStyle="italic" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="8dp"
            android:layout_marginRight="25dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/blue_round_border"
            android:cursorVisible="true"
            android:drawableStart="@drawable/password"
            android:drawablePadding="16dp"
            android:ems="10"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:padding="16dp"
            android:textAlignment="viewStart"
            android:textStyle="italic" />

        <Button
            android:id="@+id/change"
            android:layout_width="250dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="50dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/round_button"
            android:backgroundTint="@color/loginBlue"
            android:cursorVisible="true"
            android:fontFamily="sans-serif"
            android:onClick="checkCurrentPassword"
            android:text="@string/change_password"
            android:textColor="@color/loginDarkBlue"
            android:textSize="18sp"
            android:textStyle="bold|italic" />
    </LinearLayout>
</FrameLayout>